2006-04-02  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Plural Forms): More details about the expression
	syntax.
	Reported by Martin von Löwis <martin@v.loewis.de>.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* texi2html: Add option -expandtex. Expand @ifhtml by default, not
	@ifinfo. Use Unicode quotation marks instead of grave and acute
	accents. Emit charset=UTF-8 declaration. Bump version number to 1.52b.
	* Makefile.am (gettext.html, gettext_toc.html): Remove -expandinfo
	option.
	* gettext.texi: If in HTML mode, use Unicode quotation marks and
	box drawing characters.
	* msgattrib.texi: Likewise.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Introduction): Swap paragraphs.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (gettext grok, Temp Programmers, Trans Intro 0,
	Trans Intro 1, Discussions, Organization, Information Flow,
	References): Mark as outdated.

2006-04-01  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document the default keywords.
	Suggested by Bjoern Voigt <bjoern@cs.tu-berlin.de>.

2006-03-28  Bruno Haible  <bruno@clisp.org>

	* msgfilter.texi: Explain built-in filters and recode-sr-latin.

2006-03-26  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Java): Recommend a simpler idiom for Java 1.5.

2006-03-25  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (C): Also mention the hello-c++-wxwidgets example.

2006-03-19  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document the extracted comments syntax.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (PO Files): Clarify the terms "automatic comments" and
	"extracted comments".
	* msggrep.texi: Document the -X/--extracted-comment option.

2006-03-16  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi (--keyword): Document suffix 'g'.

2006-02-26  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Introduction): Fix typo.
	Reported by <atras-ch@mail.msiu.ru>.

2006-02-12  Bruno Haible  <bruno@clisp.org>
